--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -6,13 +6,13 @@ main {
 
 main h1 {
   font-size: 3rem;
-  letter-spacing: -4px;
-  border-bottom: 1px solid #fff;
-  margin-bottom: 4rem;
+  font-weight: 800;
+  color: #111827;
 }
 
-main .wrapper {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 1rem;
+main p {
+  margin: 1rem 0;
+  font-size: 0.875rem;
+  color: #111827;
+  opacity: 0.8;
 }
